@startuml
'https://SubscriptionServicetuml.com/class-diagram

hide circle

title US09 Class Diagram


class BookController  {
}

class BookService {
+getBookDetailsByIsbn():void
}

interface BookRepository <<interface>> {
+getBookDetailsByIsbn():book
}


class Book   {
+isbn
+title
+description
+author
}


BookController..> BookService:uses
BookService ..>  BookRepository:uses
BookRepository "1" -->"1..*" Book: Records
@enduml
